...
        view.wantsLayer = true

        searchResultsDataSource = SearchDataSource(with: searchBar, location: .onboarding)

        resultsTableView.isHidden = true
        resultsTableView.delegate = self
        resultsTableView.setAccessibility("ResultsTableView")
        resultsTableView.dataSource = self
        resultsTableView.target = self
        resultsTableView.doubleAction = #selector(doubleClickAction(_:))
        resultsTableView.style = .plain

        setup()
...

        func setupUndoButton() {
            let font = NSFont(name: "Avenir", size: 13) ?? NSFont.systemFont(ofSize: 13)
            let attributes = [NSAttributedString.Key.foregroundColor: NSColor.linkColor,
                              NSAttributedString.Key.font: font]
            undoButton.attributedTitle = NSAttributedString(string: "UNDO", attributes: attributes)
            undoButton.setAccessibility("UndoButton")
        }

        setupUndoButton()
    }

    @objc func doubleClickAction(_ tableView: NSTableView) {
...
        appName.stringValue = "Quick Add Locations".localized()
        onboardingTypeLabel.stringValue = "More search options in Meridian Preferences.".localized()
        setInfoLabel(UserDefaultKeys.emptyString)
        searchBar.bezelStyle = .roundedBezel
        searchBar.placeholderString = "Press Enter to Search!"
        searchBar.delegate = self
        searchBar.setAccessibility("MainSearchField")

        resultsTableView.backgroundColor = Themer.shared().mainBackgroundColor()
        resultsTableView.enclosingScrollView?.backgroundColor = Themer.shared().mainBackgroundColor()

        [appName, onboardingTypeLabel, accessoryLabel].forEach { $0?.textColor = Themer.shared().mainTextColor() }
        [accessoryLabel].forEach { $0?.isHidden = true }
...
