...
        <deployment identifier="macosx"/>
        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22505"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <customObject id="-2" userLabel="File's Owner" customClass="FloatingWindowController" customModule="Meridian" customModuleProvider="target">
            <connections>
                <outlet property="mainTableView" destination="3js-Fl-DdU" id="6Lu-oW-cuZ"/>
                <outlet property="pinButton" destination="KWj-8n-2K0" id="FUW-0f-glB"/>
                <outlet property="preferencesButton" destination="iFk-kj-d5a" id="1bK-Ld-MwV"/>
                <outlet property="scrollViewHeight" destination="SQM-7C-DIi" id="bRu-h6-Rvg"/>
                <outlet property="sharingButton" destination="GMo-5B-bnh" id="ocx-7g-Wtp"/>
                <outlet property="shutdownButton" destination="M9q-iF-MaE" id="43B-sx-8Oh"/>
                <outlet property="stackView" destination="Bn4-fy-Lm6" id="bdu-HH-FT3"/>
...
                                            <font key="font" metaFont="systemBold" size="12"/>
                                        </buttonCell>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="18" id="8yd-3c-2Nc"/>
                                            <constraint firstAttribute="width" constant="29" id="D7P-eC-faV"/>
                                        </constraints>
                                        <accessibility identifier="FloatingPin"/>
                                        <connections>
                                            <action selector="convertToFloatingWindow:" target="-2" id="qOh-xO-afp"/>
                                        </connections>
                                    </button>
                                    <button toolTip="Copy All Times" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="GMo-5B-bnh">
                                        <rect key="frame" x="99" y="7" width="30" height="26"/>
...
                                            <font key="font" metaFont="systemBold" size="12"/>
                                        </buttonCell>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="25" id="WBC-l8-Gc1"/>
                                            <constraint firstAttribute="width" constant="30" id="h85-UM-Kfy"/>
                                        </constraints>
                                        <accessibility identifier="Share"/>
                                        <connections>
                                            <action selector="shareAction:" target="-2" id="1nh-n0-V3P"/>
                                        </connections>
                                    </button>
                                    <button toolTip="Add Location" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="iFk-kj-d5a">
                                        <rect key="frame" x="20" y="10" width="29" height="19"/>
...
