...
                .font(.custom("Avenir-Light", size: 15))

            linkButton(
                title: "1. Open an issue on GitHub",
                underlineRange: 3..<26,
                font: .custom("Avenir-Light", size: 15),
                accessibilityID: "ClockerPrivateFeedback"
            ) {
                openURL(AboutUsConstants.GitHubIssuesURL, logEvent: "Opened GitHub Issues",
                        metadata: ["Country": Locale.autoupdatingCurrent.region?.identifier ?? ""])
            }

            linkButton(
...
