...
        updateTheme()

        updateDefaultPreferences()

        mainTableView.registerForDraggedTypes([.dragSession])

        mainTableView.setAccessibility("FloatingTableView")
    }

    override func updatePanelColor() {
        super.updatePanelColor()
        updateTheme()
    }
...
