...
            goBackwardsButton.toolTip = "Navigate 15 mins back".localized()
            goForwardButton.toolTip = "Navigate 15 mins forward".localized()

            modernSlider.wantsLayer = true // Required for animating reset to center
            modernSlider.enclosingScrollView?.scrollerInsets = NSEdgeInsets(top: 0, left: 0, bottom: 0, right: 0)
            modernSlider.enclosingScrollView?.backgroundColor = NSColor.clear
            modernSlider.setAccessibility("ModernSlider")
            modernSlider.postsBoundsChangedNotifications = true
            NotificationCenter.default.publisher(for: NSView.boundsDidChangeNotification, object: modernSlider.superview)
                .sink { [weak self] notification in
                    self?.collectionViewDidScroll(notification)
                }
                .store(in: &cancellables)
...
