// Copyright © 2015 Abhishek Banthia, © 2026 Chris Tirpak

import XCTest

let CLUITestingLaunchArgument = "isUITesting"

extension String {
    func localizedString() -> String {
        return NSLocalizedString(self, comment: "")
    }
}

extension XCUIElement {
    func reset(text: String) {
        guard let stringValue = value as? String else {
            XCTFail("Tried to clear and enter text into a non string value")
            return
        }

        if let hasKeyboardFocus = value(forKey: "hasKeyboardFocus") as? Bool, hasKeyboardFocus == false {
            click()
        }

        for _ in 0 ..< stringValue.count {
            typeKey(XCUIKeyboardKey.delete, modifierFlags: XCUIElement.KeyModifierFlags())
        }

        guard let newStringValue = value as? String else {
            XCTFail("Tried to clear and enter text into a non string value")
            return
        }

        for _ in 0 ..< newStringValue.count {
            typeKey(XCUIKeyboardKey.forwardDelete, modifierFlags: XCUIElement.KeyModifierFlags())
        }

        typeText(text)
    }
}

class PanelTests: XCTestCase {
    var app: XCUIApplication!

    override func setUp() {
        super.setUp()
        continueAfterFailure = false
        app = XCUIApplication()
        app.launch()
    }

    override func tearDown() {
        super.tearDown()
    }

    func testChangingLabelFromPopover() {
        app.tapMenubarIcon()

        let cell = app.tables["mainTableView"].cells.firstMatch
        let originalField = cell.staticTexts["CustomNameLabelForCell"]

        guard let originalValue = originalField.value as? String else {
            XCTFail("Original Field's value was unexpectedly nil")
            return
        }

        cell.buttons["extraOptionButton"].click()

        XCTAssertTrue(app.textFields["CustomLabel"].exists, "Custom Label doesn't exist.")

        app.textFields["CustomLabel"].reset(text: "My Precious")
        app.buttons["SaveButton"].click()

        let verifyCell = app.tables["mainTableView"].cells.firstMatch
        let newField = verifyCell.staticTexts["CustomNameLabelForCell"]

        if let newFieldValue = newField.value as? String {
            XCTAssertTrue(newFieldValue == "My Precious", "Labels don't match")
        }

        cell.buttons["extraOptionButton"].click()
        app.textFields["CustomLabel"].reset(text: originalValue)
        app.buttons["SaveButton"].click()
    }

    func testEnablingUpcomingEventView() {
        app.tapMenubarIcon()

        let upcomingView = app.collectionViews["UpcomingEventCollectionView"]
        let beforeUpcomingEventViewExist = upcomingView.exists

        app.tables["mainTableView"].typeKey(",", modifierFlags: .command)

        let meridianWindow = app.windows["Meridian"]
        let toolbarsQuery = meridianWindow.toolbars.buttons
        toolbarsQuery.element(boundBy: 2).click()

        if app.windows["Meridian"].staticTexts["InfoField"].exists {
            /* We haven't provided calendar access to the app*/
            return
        }

        let yesPredicate = NSPredicate(format: "title like %@", "Yes")
        let noPredicate = NSPredicate(format: "title like %@", "No")

        let elementsMatching = meridianWindow.radioGroups.firstMatch.radioButtons

        let yesBar = elementsMatching.element(matching: yesPredicate)

        if let selection = yesBar.value as? Int, selection == 1 {
            let noBar = elementsMatching.element(matching: noPredicate)
            noBar.click()
        } else {
            yesBar.click()
        }

        meridianWindow.buttons[XCUIIdentifierCloseWindow].click()

        app.tapMenubarIcon()

        let newUpcomingEventView = app.collectionViews["UpcomingEventCollectionView"]
        let afterUpcomingEventViewExists = newUpcomingEventView.exists

        XCTAssertNotEqual(afterUpcomingEventViewExists, beforeUpcomingEventViewExist)
    }

    func testRightMouseDownToShowPopover() {
        app.tapMenubarIcon()

        let cell = app.tables["mainTableView"].cells.firstMatch
        cell.rightClick()

        XCTAssert(app.popovers.count > 0)
    }

    // Ensure that once main panel is closed, the time in the menubar doesn't stop and stays up-to-date
    func testTimeIsUpToDate() {
        // Ensure that we have seconds selected for the timezone format
        // Open Panel; before closing panel note the time
        // Close Panel;
        // Start timer;
        // Check time increments or is not equal for all those five seconds?
    }
}
